demos/isp/max9286_96705_4channel/build-v234ce-gnu-linux-o/2
Current SDK ROOT is /home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk
make[1]: Entering directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/io/frame_io/build-v234ce-gnu-linux-o'
make[1]: Nothing to be done for 'all'.
make[1]: Leaving directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/io/frame_io/build-v234ce-gnu-linux-o'
make[1]: Entering directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/io/sdi/build-v234ce-gnu-linux-o'
make[1]: Nothing to be done for 'all'.
make[1]: Leaving directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/io/sdi/build-v234ce-gnu-linux-o'
make[1]: Entering directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/io/gdi/build-v234ce-gnu-linux-o'
make[1]: Nothing to be done for 'all'.
make[1]: Leaving directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/io/gdi/build-v234ce-gnu-linux-o'
make[1]: Entering directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/isp/cam_generic/user/build-v234ce-gnu-linux-o'
make[1]: Nothing to be done for 'all'.
make[1]: Leaving directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/isp/cam_generic/user/build-v234ce-gnu-linux-o'
make[1]: Entering directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/isp/csi/user/build-v234ce-gnu-linux-o'
make[1]: Nothing to be done for 'all'.
make[1]: Leaving directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/isp/csi/user/build-v234ce-gnu-linux-o'
make[1]: Entering directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/utils/log/build-v234ce-gnu-linux-o'
make[1]: Nothing to be done for 'all'.
make[1]: Leaving directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/utils/log/build-v234ce-gnu-linux-o'
make[1]: Entering directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/utils/umat/build-v234ce-gnu-linux-o'
make[2]: Entering directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/utils/umat/build-v234ce-gnu-linux-o'
make[2]: Nothing to be done for 'all'.
make[2]: Leaving directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/utils/umat/build-v234ce-gnu-linux-o'
make[1]: Leaving directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/utils/umat/build-v234ce-gnu-linux-o'
make[1]: Entering directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/isp/sequencer/user/build-v234ce-gnu-linux-o'
make[1]: Nothing to be done for 'all'.
make[1]: Leaving directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/isp/sequencer/user/build-v234ce-gnu-linux-o'
make[1]: Entering directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/isp/fdma/user/build-v234ce-gnu-linux-o'
make[1]: Nothing to be done for 'all'.
make[1]: Leaving directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/isp/fdma/user/build-v234ce-gnu-linux-o'
make[1]: Entering directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/utils/oal/user/build-v234ce-gnu-linux-o'
make[1]: Nothing to be done for 'all'.
make[1]: Leaving directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/utils/oal/user/build-v234ce-gnu-linux-o'
make[1]: Entering directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/isp/sram/user/build-v234ce-gnu-linux-o'
make[1]: Nothing to be done for 'all'.
make[1]: Leaving directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/isp/sram/user/build-v234ce-gnu-linux-o'
make[-]: skipping directory /home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/isp/firmware/build-v234ce-gnu-linux-o
make[1]: Entering directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/isp/graphs/max9286_96705_4/build-v234ce-gnu-linux-o'
make[1]: Leaving directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/isp/graphs/max9286_96705_4/build-v234ce-gnu-linux-o'
make[1]: Entering directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/utils/common/build-v234ce-gnu-linux-o'
make[1]: Nothing to be done for 'all'.
make[1]: Leaving directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/utils/common/build-v234ce-gnu-linux-o'
make[1]: Entering directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/isp/jpegdec/user/build-v234ce-gnu-linux-o'
make[1]: Nothing to be done for 'all'.
make[1]: Leaving directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/isp/jpegdec/user/build-v234ce-gnu-linux-o'
make[1]: Entering directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/isp/h264enc/user/build-v234ce-gnu-linux-o'
make[1]: Nothing to be done for 'all'.
make[1]: Leaving directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/isp/h264enc/user/build-v234ce-gnu-linux-o'
make[1]: Entering directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/isp/h264dec/user/build-v234ce-gnu-linux-o'
make[1]: Nothing to be done for 'all'.
make[1]: Leaving directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/isp/h264dec/user/build-v234ce-gnu-linux-o'
make[1]: Entering directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/isp/viu/user/build-v234ce-gnu-linux-o'
make[1]: Nothing to be done for 'all'.
make[1]: Leaving directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/libs/isp/viu/user/build-v234ce-gnu-linux-o'
make[1]: Entering directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/demos/isp/max9286_96705_4channel/build-v234ce-gnu-linux-o'
  arm64/gnu/optimized CC canrxtask-c.o
In file included from ../src/canrxtask.c:12:0:
../../../../demos/isp/max9286_96705_4channel/include/ImageStitching.h:198:27: error: 'DST_WIDTH' undeclared here (not in a function)
 unsigned char  SVM_BUFFER[DST_WIDTH * DST_HIGHT * 2]; 
                           ^
../../../../demos/isp/max9286_96705_4channel/include/ImageStitching.h:198:39: error: 'DST_HIGHT' undeclared here (not in a function)
 unsigned char  SVM_BUFFER[DST_WIDTH * DST_HIGHT * 2]; 
                                       ^
../src/canrxtask.c: In function 'CANRXTask':
../src/canrxtask.c:14:23: warning: unused parameter 'ptr' [-Wunused-parameter]
 void *CANRXTask(void *ptr)
                       ^
../../../../build/nbuild/helpers.mk:156: recipe for target 'canrxtask-c.o' failed
make[1]: *** [canrxtask-c.o] Error 1
make[1]: Leaving directory '/home/zhanghouyuan/NXP/S32DS_Vision_v2.0/S32DS/s32v234_sdk/demos/isp/max9286_96705_4channel/build-v234ce-gnu-linux-o'
../../../../build/nbuild/sub.mk:74: recipe for target 'allsub' failed
make: *** [allsub] Terminated
